fixed last slideshow image not showing on mobile

--- a/_screen-sizing.scss
+++ b/_screen-sizing.scss
@@ -83,11 +83,11 @@
         #work-title-container {
             padding-block: 2rem;
             width: 100%;
+        }
 
-            .work-image-footer {
-                height: auto;
-                padding-inline: 0.5rem;
-            }
+        .work-image-footer {
+            height: auto;
+            padding: 1rem;
         }
     }
 
