--- a/styles.css
+++ b/styles.css
@@ -139,9 +139,9 @@
     padding-block: 2rem;
     width: 100%;
   }
-  #work #work-title-container .work-image-footer {
+  #work .work-image-footer {
     height: auto;
-    padding-inline: 0.5rem;
+    padding: 1rem;
   }
   #contact {
     padding: 0;
